objects/Quote.object
<CustomObject>
    <fields>
        <fullName>TW1_AMM_10__c</fullName>
        <label>AMM 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_AMM_1__c</fullName>
        <label>AMM 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_AMM_2__c</fullName>
        <label>AMM 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_AMM__c</fullName>
        <label>AMM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Acrescimo_sazonal_dezembro__c</fullName>
        <label>Acréscimo sazonal dezembro (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Acrescimo_sazonal_maio__c</fullName>
        <label>Acréscimo sazonal maio (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Acrescimo_sazonal_novembro__c</fullName>
        <label>Acréscimo sazonal novembro (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Aluguel_Percentual__c</fullName>
        <label>Aluguel %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TW1_Area_utilizada__c</fullName>
        <label>Área utilizada</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Atividade__c</fullName>
        <label>Atividade (descrição da ação)</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TW1_CDU__c</fullName>
        <label>CDU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Carencia__c</fullName>
        <label>Carência</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Condominio__c</fullName>
        <label>Condomínio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Data_de_pagamento__c</fullName>
        <label>Data de pagamento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_fim_de_vigencia__c</fullName>
        <label>Data de fim de vigência</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_inicio_de_vigencia__c</fullName>
        <label>Data de início de vigência</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_FPP__c</fullName>
        <label>FPP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Forma_de_pagamento_da_CDU__c</fullName>
        <label>Forma de pagamento da CDU</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Forma_pagamento_pacote_de_midia__c</fullName>
        <label>Forma de pagamento pacote de mídia</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TW1_IPTU__c</fullName>
        <label>IPTU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Mes_aluguel_dobrado__c</fullName>
        <label>Mês de aluguel dobrado</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Janeiro</fullName>
                </value>
                <value>
                    <fullName>Fevereiro</fullName>
                </value>
                <value>
                    <fullName>Março</fullName>
                </value>
                <value>
                    <fullName>Abril</fullName>
                </value>
                <value>
                    <fullName>Maio</fullName>
                </value>
                <value>
                    <fullName>Junho</fullName>
                </value>
                <value>
                    <fullName>Julho</fullName>
                </value>
                <value>
                    <fullName>Agosto</fullName>
                </value>
                <value>
                    <fullName>Setembro</fullName>
                </value>
                <value>
                    <fullName>Outubro</fullName>
                </value>
                <value>
                    <fullName>Novembro</fullName>
                </value>
                <value>
                    <fullName>Dezembro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_OpptRecordTypeName__c</fullName>
        <formula>Opportunity.TW1_OpportunityRecordTypeName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordTypeNameOppt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Periodo_de_locacao__c</fullName>
        <label>Período de locação</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Indeterminado</fullName>
                </value>
                <value>
                    <fullName>Determinado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Prazo__c</fullName>
        <label>Prazo (dias)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Quantidade_de_meses__c</fullName>
        <formula>TEXT((YEAR(TW1_Data_fim_de_vigencia__c)*12+MONTH(TW1_Data_fim_de_vigencia__c))-(YEAR(TW1_Data_inicio_de_vigencia__c)*12+MONTH(TW1_Data_inicio_de_vigencia__c)))</formula>
        <label>Quantidade de meses</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_QuoteRecordTypeName__c</fullName>
        <formula>RecordType.Name</formula>
        <label>RecordTypeName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Segunda_data_de_pagamento__c</fullName>
        <label>Segunda data de pagamento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Sincronizada__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sincronizada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Taxa_de_transferencia__c</fullName>
        <label>Taxa de transferência</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_VGL_AMM__c</fullName>
        <label>VGL AMM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_VGL_total__c</fullName>
        <label>VGL total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_Desconto__c</fullName>
        <label>Valor Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_TR__c</fullName>
        <label>Valor TR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_Total_Sem_Desconto__c</fullName>
        <label>Valor Total Sem Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Valor__c</fullName>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_pacote_de_midia__c</fullName>
        <label>Valor de pacote de mídia</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <recordTypes>
        <fullName>Cotacao_Feiras_e_Eventos</fullName>
        <active>true</active>
        <label>Cotação de Feiras e Eventos</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cotacao_Loja</fullName>
        <active>true</active>
        <label>Cotação de Loja</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cotacao_Mall</fullName>
        <active>true</active>
        <label>Cotação de Mall</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cotacao_Midia</fullName>
        <active>true</active>
        <label>Cotação de Mídia</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>